Removed kif.css, fixed kif.less so error messages are center aligned.

--- a/ui/src/css/kif.less
+++ b/ui/src/css/kif.less
@@ -47,6 +47,7 @@ body, label, textarea, select, button {
 
 #err-wrapper-inner {
     .bordered-solid;
+    text-align: center;
     padding-top: (@margin-padding * 4);
     padding-bottom: (@margin-padding * 4);
     font-size: 200%;
